[gd_scene load_steps=2 format=3 uid="uid://dq6vbimtda568"]

[ext_resource type="Script" path="res://addons/gSheet/scenes/spreadsheet/full/scenes/enumPopup/enumPopup.gd" id="1"]

[node name="enumPopup" type="Window"]
visible = false
exclusive = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.022
anchor_right = 0.961
anchor_bottom = 0.974

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="select" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "select"

[node name="cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "cancel"

[connection signal="item_activated" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/cancel" to="." method="_on_Button2_pressed"]
